--- a/src/lib/index.scss
+++ b/src/lib/index.scss
@@ -86,6 +86,7 @@ body {
 	--tertiary-text-hover: var(--light-3);
 	--accent-text: var(--light-3);
 	--accent-text-hover: var(--light-4);
+	--accent-rgb: 193, 193, 193; /* RGB pour light-3 */
 
 	--border: var(--dark-2);
 	--border-hover: var(--light-7);
@@ -99,6 +100,9 @@ body {
 	--code-constant: var(--code-constant-dark);
 	--code-operator: var(--code-operator-dark);
 	--link: var(--link-light);
+	
+	--card-bg: var(--dark-1);
+	--soft-bg: var(--dark-2);
 }
 
 
@@ -123,6 +127,7 @@ body {
 	--tertiary-text-hover: var(--dark-3);
 	--accent-text: var(--dark-3);
 	--accent-text-hover: var(--dark-4);
+	--accent-rgb: 62, 62, 62; /* RGB pour dark-3 */
 
 	--border: var(--light-1);
 	--border-hover: var(--dark-8);
@@ -136,6 +141,9 @@ body {
 	--code-constant: var(--code-constant-light);
 	--code-operator: var(--code-operator-light);
 	--link: var(--link-dark);
+	
+	--card-bg: var(--light-1);
+	--soft-bg: var(--light-2);
 }
 
 
